Chapter 16 fixed sort of?  Shadows still jagged.